src/components/Stats/ContentTeamTable/ContentTeamTable.module.scss
.wrapper {
  flex: 1;
  padding: 2rem;
}

.tableHeader {
  color: #838383;
  border-bottom: 0.5px solid rgb(16, 16, 16, 0.01);
  box-shadow: 0px 6px 6px -6px rgb(16, 16, 16, 0.07);

  > div {
    font: 700 0.75rem var(--font-nunito);
  }
}

.tableRow {
  > div {
    font: 300 0.875rem var(--font-nunito);
  }

  &:nth-child(2n) {
    background-color: #eaeaea;
  }
}

.tableHeader,
.tableRow {
  min-height: 2rem;
  display: flex;
  align-items: center;
  justify-content: space-between;

  > div {
    text-align: center;
    width: 2.5rem;

    @media screen and (max-width: 1050px) {
      width: 2.2rem;
    }

    &:first-child {
      text-align: left;
      width: 20rem;
      padding-left: 1rem;

      @media screen and (max-width: 800px) {
        padding-left: 0;
      }
    }

    &.wider {
      width: 3.5rem;
    }
  }
}

.rows {
  position: relative;
}

.mobileWrapper {
  border-top: 0.5px solid #cdcccc;
  width: 100%;
  padding: 0;
}

.fullHeader {
  width: 100%;
  display: flex;

  > .leftHeader {
    background-color: white;
    display: flex;
    font-size: 12px;
    font-weight: 700;
    color: #838383;
    padding-left: 8.5px;
    height: 38.5px;
    align-items: center;
    border-bottom: 0.5px solid #dfdfdf;
    flex: 0 0 280px;

    > div {
      &:first-child {
        flex: 1 100px;
      }
      &:nth-child(2) {
        width: 40px;
        text-align: center;
      }
      &:nth-child(3) {
        width: 50px;
      }
    }
  }

  > .rightHeader {
    background-color: white;
    display: flex;
    font-size: 12px;
    font-weight: 700;
    color: #838383;
    height: 38.5px;
    align-items: center;
    border-bottom: 0.5px solid #dfdfdf;
    width: fit-content;
    overflow-x: hidden;
    scroll-behavior: initial;

    > div {
      flex: 0 0 2rem;

      &.wider {
        flex: 0 0 3rem;
      }
    }
  }
}

.sides {
  width: 100%;
  max-height: calc(100vh - 30.63px - 132px - 39px);
  overflow-y: scroll;
  display: flex;

  &::-webkit-scrollbar {
    width: 0;
  }
}

.leftRows {
  max-width: 280px;
  // flex: 0 0 280px;
  > .tableRow {
    display: flex;
    height: 38.5px;

    > div {
      font: 300 0.875rem / 38.5px var(--font-nunito);

      &:first-child {
        padding-left: 8.5px;
        flex: 1 100px;
        line-height: 15px;
      }
      &:nth-child(2) {
        width: 40px;
        text-align: center;
      }
      &:nth-child(3) {
        width: 50px;
        padding-left: 0;
        text-align: center;
        display: grid;
        place-items: center;

        > img {
          width: 40px;
        }
      }

      .fullName {
        font-weight: 700;
      }
    }

    > .teamNames {
      font-weight: 700;
    }

    &:nth-child(2n) {
      background-color: #eaeaea;
    }
  }
}

.rightRows {
  overflow-x: scroll;
  height: fit-content;

  > .tableRow {
    display: flex;
    width: fit-content;
    justify-content: unset;
    height: 38.5px;
    // width: 560px;

    > div {
      width: 2rem !important;
      flex: 0 0 2rem;
      text-align: center;
      font: 300 0.875rem/38.5px var(--font-nunito);

      &.wider {
        width: 3rem !important;
        flex: 0 0 3rem;
      }
    }

    &:nth-child(2n) {
      background-color: #eaeaea;
    }
  }
}

